# cpm-arc-ball

./: .dox  .gitignore  .travis.yml  CMakeLists.txt  README.md  Vagrantfile  _arc_ball_8hpp_source.html  _context_8hpp_source.html  _g_l_platform_8hpp_source.html  annotated.html  bootstrap.sh  class_c_p_m___a_r_c___b_a_l_l___n_s_1_1_arc_ball-members.html  class_c_p_m___a_r_c___b_a_l_l___n_s_1_1_arc_ball.html  class_c_p_m___g_l___b_a_t_c_h___c_o_n_t_e_x_t___n_s_1_1_context-members.html  class_c_p_m___g_l___b_a_t_c_h___c_o_n_t_e_x_t___n_s_1_1_context.html  class_c_p_m___g_l___b_a_t_c_h___c_o_n_t_e_x_t___n_s_1_1_no_available_context-members.html  class_c_p_m___g_l___b_a_t_c_h___c_o_n_t_e_x_t___n_s_1_1_no_available_context.html  classes.html  cloneCookBooks.sh  files.html  functions.html  functions_func.html  index.html  pages.html  todo.html
arc-ball/: ArcBall.cpp  ArcBall.hpp
iauns-arc-ball/: ArcBall.cpp  ArcBall.hpp
tests/: .gitignore  CMakeLists.txt  GlobalTestEnvironment.cpp  GlobalTestEnvironment.hpp  SpireTestFixture.cpp  SpireTestFixture.hpp  TestRotations.cpp  main.cpp  run-tests.sh
